# flow_grpo

./: pyproject.toml  setup.py
config/: grpo.py
flow_grpo/: fsdp_utils.py
flow_grpo/diffusers_patch/: qwenimage_edit_pipeline_with_logprob.py
scripts/: train_qwenimage_edit.py
